tests/snapshots/snapshot_tests__random_board_snapshot_238.snap
---
source: tests/snapshot_tests.rs
assertion_line: 45
expression: "(minions, recording)"
---
- ? idx: 1
    version: 1
  : "Malchezaar, Prince of Dance"
  ? idx: 2
    version: 1
  : Golden Sanctum Rester
  ? idx: 3
    version: 1
  : Golden Kooky Chemist
  ? idx: 4
    version: 1
  : Golden Bristlemane Scrapsmith
  ? idx: 5
    version: 1
  : Golden Tabbycat
  ? idx: 6
    version: 1
  : Golden Amalgam
  ? idx: 7
    version: 1
  : Wargear
  ? idx: 8
    version: 1
  : Deep Blue Crooner
  ? idx: 9
    version: 1
  : Golden Lightfang Enforcer
  ? idx: 10
    version: 1
  : "Golden Ozumat's Tentacle"
  ? idx: 11
    version: 1
  : Golden Humming Bird
  ? idx: 12
    version: 1
  : Golden Upbeat Impressionist
  ? idx: 13
    version: 1
  : Golden Murloc Warleader
  ? idx: 14
    version: 1
  : "Golden Prestor's Pyrospawn"
- - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 6
      source:
        idx: 1
        version: 1
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 4
      source:
        idx: 10
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 10
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 10
        version: 1
  - Death:
      minion:
        idx: 1
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 1
        version: 1
  - AfterAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 10
      source:
        idx: 2
        version: 1
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 8
      source:
        idx: 9
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 9
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 9
        version: 1
  - AfterAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 8
      source:
        idx: 3
        version: 1
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 10
      source:
        idx: 2
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 2
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 2
        version: 1
  - Death:
      minion:
        idx: 3
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 3
        version: 1
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 8
      source:
        idx: 4
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 2
      source:
        idx: 5
        version: 1
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 8
      source:
        idx: 4
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 5
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 5
        version: 1
  - AfterAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 4
      source:
        idx: 6
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 11
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 11
        version: 1
  - AfterAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 6
      source:
        idx: 7
        version: 1
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 6
      source:
        idx: 14
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 7
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 7
        version: 1
  - AfterAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 2
      source:
        idx: 8
        version: 1
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 6
      source:
        idx: 13
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 8
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 8
        version: 1
  - AfterAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 6
      source:
        idx: 13
        version: 1
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 4
      source:
        idx: 6
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 13
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 6
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 6
        version: 1
  - Death:
      minion:
        idx: 13
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 13
        version: 1
  - AfterAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - End: TopWin

